modification des places ajouter par rapport au profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,4 +105,5 @@
     <string name="inviter">Inviter</string>
     <string name="modifier_votre_profile">modifier votre profile</string>
     <string name="r_diger_un_message">Rédiger un message...</string>
+    <string name="supprimer">supprimer</string>
 </resources>
