ajout du genre d'artiste a l'inscription terminer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,4 +106,5 @@
     <string name="modifier_votre_profile">modifier votre profile</string>
     <string name="r_diger_un_message">Rédiger un message...</string>
     <string name="supprimer">supprimer</string>
+    <string name="quel_genre_etes_vous">Quel genre etes-vous :</string>
 </resources>
