premier partie des modification terminer -> niveau design seulement

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,5 @@
     <string name="r_diger_un_message">Rédiger un message...</string>
     <string name="supprimer">supprimer</string>
     <string name="quel_genre_etes_vous">Quel genre etes-vous :</string>
+    <string name="nom_d_artiste">nom d\'artiste</string>
 </resources>
