debut test new lecteur

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,9 @@
     <string name="s_inscrire">S\'inscrire</string>
     <string name="insription">Insription</string>
     <string name="vous_avez_d_j_un_compte_cliquez_ici">vous avez déjà un compte? cliquez ici</string>
-    <string name="nom">Nom*</string>
-    <string name="pr_nom">Prénom*</string>
-    <string name="email">Email*</string>
+    <string name="nom">Nom</string>
+    <string name="pr_nom">Prénom</string>
+    <string name="email">Email</string>
     <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
     <string name="etes_vous_artiste">Etes-vous artiste ?</string>
     <string name="title_activity_accueil">AccueilActivity</string>
@@ -85,14 +85,14 @@
     <string name="continuer">Continuer</string>
     <string name="ignorez_cette_tape">Ignorez </string>
     <string name="image_de_profile">Image de profile</string>
-    <string name="description_">Description*</string>
+    <string name="description_">Description</string>
     <string name="importer_une_chanson">Importer une chanson</string>
     <string name="information_supplementaire">Information supplementaire</string>
     <string name="emplacement_du_son">emplacement du son</string>
     <string name="coutez_la_chanson_que_vous_avez_import">écoutez la chanson que vous avez importé</string>
     <string name="nom_de_la_place">nom de la place*</string>
-    <string name="adresse_">Adresse*</string>
-    <string name="num_ro">Numéro*</string>
+    <string name="adresse_">Adresse</string>
+    <string name="num_ro">Numéro</string>
     <string name="a_pseudo">A pseudo</string>
     <string name="aujouter_une_chanson">aujouter une chanson</string>
     <string name="ajouter_une_image">ajouter une image</string>
